--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
@@ -1119,6 +1119,7 @@ at-least-one-value-is-required=És necessari com a mínim un valor.
 attachment-found-in-wiki-page-x=Fitxer adjunt trobat a la pàgina wiki {0}
 attend=Assistir
 attribute=Atribut
+attribute-code=Attribute Code (Automatic Copy)
 attribute-mapping=Mapatge d'atributs
 attribute-mapping-help=Introduïu el mapatge d'atributs per als atributs emailAddress, screenName, firstName, lastName i uuid. Un atribut <strong>per línia</strong>.
 attributes=Atributs
@@ -3367,9 +3368,14 @@ enter-url-that-contains-the-image-you-want-to-add=Introdueix la URL que conté l
 enter-your-current-password-to-confirm-changes=Introduïu la contrasenya actual per confirmar els canvis.
 enter-your-custom-css=Introduïu el vostre CSS personalitzat.
 enter-your-custom-css-class-names=Introduïu els noms de les classes dels CSS personalitzats.
+enterprise-product-notification-body[commerce]=Use of Liferay Commerce apps is not covered by Liferay Support and other subscription benefits without an active Liferay Commerce subscription. If you do not want to use or have access to Liferay Commerce, access can be disabled completely by following these steps {0}here{1}. If you are interested in purchasing a Liferay Commerce subscription, please speak to your Liferay sales representative or contact Liferay Sales at {2}. (Automatic Copy)
+enterprise-product-notification-body[enterprise.search]=Use of Liferay Enterprise Search (LES) apps and features is not covered by Liferay Support and other subscription benefits without an active LES add-on subscription. If you do not want to use or have access to LES, access can be disabled completely by following these steps {0}here{1}. If you are interested in purchasing an LES add-on subscription, please speak to your Liferay sales representative or contact Liferay Sales at {2}. (Automatic Copy)
+enterprise-product-notification-title[commerce]=Commerce (Automatic Copy)
+enterprise-product-notification-title[enterprise.search]=Liferay Enterprise Search (Automatic Copy)
 enters-task=Entra a la tasca:
 entire-series=Tota la sèrie
 entity=Entitat
+entity-attributes=Entity Attributes (Automatic Copy)
 entity-endpoint-enabled=Extrem de l'entitat habilitat
 entity-endpoint-enabled-description=Habilita l'etiquetatge automàtic de documents amb l'extrem de l'entitat de l'API de Cloud Natural Language.
 entity-id-help=L'ID de l'entitat és un identificador únic que pot tenir fins a 1024 caràcters.
