--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
@@ -1119,6 +1119,7 @@ at-least-one-value-is-required=Der kræves mindst én værdi. (Automatic Transla
 attachment-found-in-wiki-page-x=Attachment Found in Wiki Page {0} (Automatic Copy)
 attend=Deltage (Automatic Translation)
 attribute=attribut (Automatic Translation)
+attribute-code=Attribute Code (Automatic Copy)
 attribute-mapping=Tilknytning af attribut (Automatic Translation)
 attribute-mapping-help=Enter attribute mapping for attributes emailAddress, screenName, firstName, lastName, and uuid. One attribute <strong>per line</strong>. (Automatic Copy)
 attributes=Attributter (Automatic Translation)
@@ -3367,9 +3368,14 @@ enter-url-that-contains-the-image-you-want-to-add=Angiv den URL-adresse, der ind
 enter-your-current-password-to-confirm-changes=Angiv din nuværende adgangskode for at bekræfte ændringer. (Automatic Translation)
 enter-your-custom-css=Angiv your custom CSS.
 enter-your-custom-css-class-names=Angiv your custom CSS class names.
+enterprise-product-notification-body[commerce]=Use of Liferay Commerce apps is not covered by Liferay Support and other subscription benefits without an active Liferay Commerce subscription. If you do not want to use or have access to Liferay Commerce, access can be disabled completely by following these steps {0}here{1}. If you are interested in purchasing a Liferay Commerce subscription, please speak to your Liferay sales representative or contact Liferay Sales at {2}. (Automatic Copy)
+enterprise-product-notification-body[enterprise.search]=Use of Liferay Enterprise Search (LES) apps and features is not covered by Liferay Support and other subscription benefits without an active LES add-on subscription. If you do not want to use or have access to LES, access can be disabled completely by following these steps {0}here{1}. If you are interested in purchasing an LES add-on subscription, please speak to your Liferay sales representative or contact Liferay Sales at {2}. (Automatic Copy)
+enterprise-product-notification-title[commerce]=Commerce (Automatic Copy)
+enterprise-product-notification-title[enterprise.search]=Liferay Enterprise Search (Automatic Copy)
 enters-task=Angiver opgave: (Automatic Translation)
 entire-series=Hele serien (Automatic Translation)
 entity=enhed (Automatic Translation)
+entity-attributes=Entity Attributes (Automatic Copy)
 entity-endpoint-enabled=Objektslutpunkt aktiveret (Automatic Translation)
 entity-endpoint-enabled-description=Aktiver automatisk mærkning af tekst ved hjælp af slutpunktet Cloud Natural Language API Entity. (Automatic Translation)
 entity-id-help=Enheds-id'et er et entydigt id, der kan være op til 1024 tegn langt. (Automatic Translation)
