--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
@@ -1119,6 +1119,7 @@ at-least-one-value-is-required=Legalább egy érték megadása szükséges.
 attachment-found-in-wiki-page-x=Csatolmány van a Wiki oldalon {0}
 attend=Részt vesz
 attribute=Attribútum
+attribute-code=Attribute Code (Automatic Copy)
 attribute-mapping=Attribútum-hozzárendelés
 attribute-mapping-help=Adja meg az emailAddress, screenName, firstName, lastName és uuid attribútumok attribútum-hozzárendelését. <strong>Soronként egy</strong> attribútum.
 attributes=Attribútumok
@@ -3367,9 +3368,14 @@ enter-url-that-contains-the-image-you-want-to-add=Add meg az URL-t, ami tartalma
 enter-your-current-password-to-confirm-changes=A módosítások megerősítéséhez adja meg a jelenleg jelszavát.
 enter-your-custom-css=Add meg a saját CSS-edet.
 enter-your-custom-css-class-names=Az egyéni CSS osztálynevek megadása.
+enterprise-product-notification-body[commerce]=Use of Liferay Commerce apps is not covered by Liferay Support and other subscription benefits without an active Liferay Commerce subscription. If you do not want to use or have access to Liferay Commerce, access can be disabled completely by following these steps {0}here{1}. If you are interested in purchasing a Liferay Commerce subscription, please speak to your Liferay sales representative or contact Liferay Sales at {2}. (Automatic Copy)
+enterprise-product-notification-body[enterprise.search]=Use of Liferay Enterprise Search (LES) apps and features is not covered by Liferay Support and other subscription benefits without an active LES add-on subscription. If you do not want to use or have access to LES, access can be disabled completely by following these steps {0}here{1}. If you are interested in purchasing an LES add-on subscription, please speak to your Liferay sales representative or contact Liferay Sales at {2}. (Automatic Copy)
+enterprise-product-notification-title[commerce]=Commerce (Automatic Copy)
+enterprise-product-notification-title[enterprise.search]=Liferay Enterprise Search (Automatic Copy)
 enters-task=Belép a feladatba:
 entire-series=Az egész sorozat
 entity=Entitás
+entity-attributes=Entity Attributes (Automatic Copy)
 entity-endpoint-enabled=Entitás végpontja engedélyezve
 entity-endpoint-enabled-description=A dokumentumok automatikus címkézésének engedélyezése a Cloud Natural Language API entitás végpontja használatával.
 entity-id-help=Az entitásazonosító egy legfeljebb 1024 karakter hosszúságú egyedi azonosító.
