--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -1119,6 +1119,7 @@ at-least-one-value-is-required=Minstens één waarde is vereist.
 attachment-found-in-wiki-page-x=Bijlage gevonden bij de wikipagina {0}
 attend=Deelnemen
 attribute=Attribuut
+attribute-code=Attribute Code (Automatic Copy)
 attribute-mapping=Toewijzing kenmerk
 attribute-mapping-help=Voer attribuuttoewijzing in voor de attributen emailAddress, screenName, firstName, lastName en uuid. Een attribuut <strong>per lijn</strong>.
 attributes=Kenmerken
@@ -3367,9 +3368,14 @@ enter-url-that-contains-the-image-you-want-to-add=Voer de URL van de afbeelding 
 enter-your-current-password-to-confirm-changes=Voer uw huidige wachtwoord in om de wijzigingen te bevestigen.
 enter-your-custom-css=Geef uw eigen CSS-regels op.
 enter-your-custom-css-class-names=Geef uw eigen CSS-klassenamen op.
+enterprise-product-notification-body[commerce]=Use of Liferay Commerce apps is not covered by Liferay Support and other subscription benefits without an active Liferay Commerce subscription. If you do not want to use or have access to Liferay Commerce, access can be disabled completely by following these steps {0}here{1}. If you are interested in purchasing a Liferay Commerce subscription, please speak to your Liferay sales representative or contact Liferay Sales at {2}. (Automatic Copy)
+enterprise-product-notification-body[enterprise.search]=Use of Liferay Enterprise Search (LES) apps and features is not covered by Liferay Support and other subscription benefits without an active LES add-on subscription. If you do not want to use or have access to LES, access can be disabled completely by following these steps {0}here{1}. If you are interested in purchasing an LES add-on subscription, please speak to your Liferay sales representative or contact Liferay Sales at {2}. (Automatic Copy)
+enterprise-product-notification-title[commerce]=Commerce (Automatic Copy)
+enterprise-product-notification-title[enterprise.search]=Liferay Enterprise Search (Automatic Copy)
 enters-task=Neemt deel aan de taak:
 entire-series=Hele reeks
 entity=Entiteit
+entity-attributes=Entity Attributes (Automatic Copy)
 entity-endpoint-enabled=Eindpunt entiteit ingeschakeld
 entity-endpoint-enabled-description=Automatisch taggen van documenten met behulp van het Cloud Natural Language API Entiteit eindpunt.
 entity-id-help=De entiteit-ID is een unieke ID die tot 1.024 tekens lang kan zijn.
