--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
@@ -1119,6 +1119,7 @@ at-least-one-value-is-required=Pelo menos um valor é necessário.
 attachment-found-in-wiki-page-x=Anexo encontrado na página da wiki {0}
 attend=Participar
 attribute=atributo (Automatic Translation)
+attribute-code=Attribute Code (Automatic Copy)
 attribute-mapping=Mapeamento de atributos (Automatic Translation)
 attribute-mapping-help=Enter attribute mapping for attributes emailAddress, screenName, firstName, lastName, and uuid. One attribute <strong>per line</strong>. (Automatic Copy)
 attributes=Atributos (Automatic Translation)
@@ -3367,9 +3368,14 @@ enter-url-that-contains-the-image-you-want-to-add=Insira o URL que contêm a ima
 enter-your-current-password-to-confirm-changes=Digite sua senha atual para confirmar alterações. (Automatic Translation)
 enter-your-custom-css=Insira o seu CSS personalizado.
 enter-your-custom-css-class-names=Insira o nome das suas classes CSS personalizadas.
+enterprise-product-notification-body[commerce]=Use of Liferay Commerce apps is not covered by Liferay Support and other subscription benefits without an active Liferay Commerce subscription. If you do not want to use or have access to Liferay Commerce, access can be disabled completely by following these steps {0}here{1}. If you are interested in purchasing a Liferay Commerce subscription, please speak to your Liferay sales representative or contact Liferay Sales at {2}. (Automatic Copy)
+enterprise-product-notification-body[enterprise.search]=Use of Liferay Enterprise Search (LES) apps and features is not covered by Liferay Support and other subscription benefits without an active LES add-on subscription. If you do not want to use or have access to LES, access can be disabled completely by following these steps {0}here{1}. If you are interested in purchasing an LES add-on subscription, please speak to your Liferay sales representative or contact Liferay Sales at {2}. (Automatic Copy)
+enterprise-product-notification-title[commerce]=Commerce (Automatic Copy)
+enterprise-product-notification-title[enterprise.search]=Liferay Enterprise Search (Automatic Copy)
 enters-task=Entra na Tarefa: (Automatic Translation)
 entire-series=Série inteira (Automatic Translation)
 entity=entidade (Automatic Translation)
+entity-attributes=Entity Attributes (Automatic Copy)
 entity-endpoint-enabled=Endpoint da entidade ativado (Automatic Translation)
 entity-endpoint-enabled-description=Habilite a marcação automática de texto usando o ponto final da Entidade API da Linguagem Natural na Nuvem. (Automatic Translation)
 entity-id-help=O ID da entidade é um identificador único que pode ter até 1024 caracteres. (Automatic Translation)
