--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
@@ -1119,6 +1119,7 @@ at-least-one-value-is-required=En az bir değer gereklidir. (Automatic Translati
 attachment-found-in-wiki-page-x=Attachment Found in Wiki Page {0} (Automatic Copy)
 attend=katılmak (Automatic Translation)
 attribute=Öznitelik (Automatic Translation)
+attribute-code=Attribute Code (Automatic Copy)
 attribute-mapping=Öznitelik Eşleme (Automatic Translation)
 attribute-mapping-help=Enter attribute mapping for attributes emailAddress, screenName, firstName, lastName, and uuid. One attribute <strong>per line</strong>. (Automatic Copy)
 attributes=Öznitelik (Automatic Translation)
@@ -3367,9 +3368,14 @@ enter-url-that-contains-the-image-you-want-to-add=Eklemek istediğiniz resmi iç
 enter-your-current-password-to-confirm-changes=Değişiklikleri onaylamak için geçerli parolanızı girin. (Automatic Translation)
 enter-your-custom-css=Özel CSS'inizi giriniz.
 enter-your-custom-css-class-names=Özel CSS sınıf adlarınızı girin. (Automatic Translation)
+enterprise-product-notification-body[commerce]=Use of Liferay Commerce apps is not covered by Liferay Support and other subscription benefits without an active Liferay Commerce subscription. If you do not want to use or have access to Liferay Commerce, access can be disabled completely by following these steps {0}here{1}. If you are interested in purchasing a Liferay Commerce subscription, please speak to your Liferay sales representative or contact Liferay Sales at {2}. (Automatic Copy)
+enterprise-product-notification-body[enterprise.search]=Use of Liferay Enterprise Search (LES) apps and features is not covered by Liferay Support and other subscription benefits without an active LES add-on subscription. If you do not want to use or have access to LES, access can be disabled completely by following these steps {0}here{1}. If you are interested in purchasing an LES add-on subscription, please speak to your Liferay sales representative or contact Liferay Sales at {2}. (Automatic Copy)
+enterprise-product-notification-title[commerce]=Commerce (Automatic Copy)
+enterprise-product-notification-title[enterprise.search]=Liferay Enterprise Search (Automatic Copy)
 enters-task=Görev Girer: (Automatic Translation)
 entire-series=Tüm Seri (Automatic Translation)
 entity=varlık (Automatic Translation)
+entity-attributes=Entity Attributes (Automatic Copy)
 entity-endpoint-enabled=Varlık Bitiş Noktası Etkin (Automatic Translation)
 entity-endpoint-enabled-description=Bulut Doğal Dil API Varlığı uç noktasını kullanarak metnin otomatik etiketlemesini etkinleştirin. (Automatic Translation)
 entity-id-help=Varlık Kimliği, 1024 karakter uzunluğunda olabilen benzersiz bir tanımlayıcıdır. (Automatic Translation)
