--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
@@ -1119,6 +1119,7 @@ at-least-one-value-is-required=至少需要一个值。
 attachment-found-in-wiki-page-x=Wiki页面{0}中的附件
 attend=参加
 attribute=特性
+attribute-code=Attribute Code (Automatic Copy)
 attribute-mapping=特性映射
 attribute-mapping-help=为特性 emailAddress、screenName、firstName、lastName 和 uuid 输入特性映射。<strong>每行</strong>一个特性。
 attributes=特性
@@ -3367,9 +3368,14 @@ enter-url-that-contains-the-image-you-want-to-add=输入包含您要添加图片
 enter-your-current-password-to-confirm-changes=请输入您的当前密码以确认变更。
 enter-your-custom-css=输入您的自定义CSS样式表。
 enter-your-custom-css-class-names=输入您的自定义CSS类名称。
+enterprise-product-notification-body[commerce]=Use of Liferay Commerce apps is not covered by Liferay Support and other subscription benefits without an active Liferay Commerce subscription. If you do not want to use or have access to Liferay Commerce, access can be disabled completely by following these steps {0}here{1}. If you are interested in purchasing a Liferay Commerce subscription, please speak to your Liferay sales representative or contact Liferay Sales at {2}. (Automatic Copy)
+enterprise-product-notification-body[enterprise.search]=Use of Liferay Enterprise Search (LES) apps and features is not covered by Liferay Support and other subscription benefits without an active LES add-on subscription. If you do not want to use or have access to LES, access can be disabled completely by following these steps {0}here{1}. If you are interested in purchasing an LES add-on subscription, please speak to your Liferay sales representative or contact Liferay Sales at {2}. (Automatic Copy)
+enterprise-product-notification-title[commerce]=Commerce (Automatic Copy)
+enterprise-product-notification-title[enterprise.search]=Liferay Enterprise Search (Automatic Copy)
 enters-task=进入任务：
 entire-series=整个系列
 entity=实体
+entity-attributes=Entity Attributes (Automatic Copy)
 entity-endpoint-enabled=启用实体端点
 entity-endpoint-enabled-description=使用 Cloud Natural Language API 实体端点启用文档的自动标记。
 entity-id-help=实体 ID 是一个唯一标识符，最大长度为 1024 个字符。
