--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
@@ -1119,6 +1119,7 @@ at-least-one-value-is-required=至少有一個值是必填的。
 attachment-found-in-wiki-page-x=在Wiki頁面 {0} 找到的附件。
 attend=出席
 attribute=屬性
+attribute-code=Attribute Code (Automatic Copy)
 attribute-mapping=屬性映射
 attribute-mapping-help=Enter attribute mapping for attributes emailAddress, screenName, firstName, lastName, and uuid. One attribute <strong>per line</strong>.
 attributes=屬性
@@ -3367,9 +3368,14 @@ enter-url-that-contains-the-image-you-want-to-add=輸入網址包含您想要加
 enter-your-current-password-to-confirm-changes=請輸入您的當前密碼以確認變更。
 enter-your-custom-css=輸入您客製CSS。
 enter-your-custom-css-class-names=輸入您客製CSS class名稱。
+enterprise-product-notification-body[commerce]=Use of Liferay Commerce apps is not covered by Liferay Support and other subscription benefits without an active Liferay Commerce subscription. If you do not want to use or have access to Liferay Commerce, access can be disabled completely by following these steps {0}here{1}. If you are interested in purchasing a Liferay Commerce subscription, please speak to your Liferay sales representative or contact Liferay Sales at {2}. (Automatic Copy)
+enterprise-product-notification-body[enterprise.search]=Use of Liferay Enterprise Search (LES) apps and features is not covered by Liferay Support and other subscription benefits without an active LES add-on subscription. If you do not want to use or have access to LES, access can be disabled completely by following these steps {0}here{1}. If you are interested in purchasing an LES add-on subscription, please speak to your Liferay sales representative or contact Liferay Sales at {2}. (Automatic Copy)
+enterprise-product-notification-title[commerce]=Commerce (Automatic Copy)
+enterprise-product-notification-title[enterprise.search]=Liferay Enterprise Search (Automatic Copy)
 enters-task=進入任務：
 entire-series=整個系列
 entity=實體
+entity-attributes=Entity Attributes (Automatic Copy)
 entity-endpoint-enabled=已啟用實體端點
 entity-endpoint-enabled-description=啟用使用Cloud Natural Language API Entity 端點的文字自動標籤功能。
 entity-id-help=Entity ID is a unique identifier that can be up to 1024 characters long.
