--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
@@ -1119,6 +1119,7 @@ at-least-one-value-is-required=تلزم قيمة واحدة على الأقل.
 attachment-found-in-wiki-page-x=المرفق المعثور عليه في صفحة ويكي {0}
 attend=حضور
 attribute=السمة
+attribute-code=Attribute Code (Automatic Copy)
 attribute-mapping=تعيين السمات
 attribute-mapping-help=أدخل تعيين السمات للسمات emailAddress و screenName و firstName و lastName و uuid بحيث يتم إدخال سمة واحدة <strong>لكل سطر</strong>.
 attributes=السمات
@@ -3367,9 +3368,14 @@ enter-url-that-contains-the-image-you-want-to-add=أدخل عنوان URL الذ
 enter-your-current-password-to-confirm-changes=أدخل كلمة المرور الحالية لك لتأكيد التغييرات.
 enter-your-custom-css=أدخل CSS المخصص الخاص بك
 enter-your-custom-css-class-names=أدخل أسماء فئات CSS المخصص الخاص بك
+enterprise-product-notification-body[commerce]=Use of Liferay Commerce apps is not covered by Liferay Support and other subscription benefits without an active Liferay Commerce subscription. If you do not want to use or have access to Liferay Commerce, access can be disabled completely by following these steps {0}here{1}. If you are interested in purchasing a Liferay Commerce subscription, please speak to your Liferay sales representative or contact Liferay Sales at {2}. (Automatic Copy)
+enterprise-product-notification-body[enterprise.search]=Use of Liferay Enterprise Search (LES) apps and features is not covered by Liferay Support and other subscription benefits without an active LES add-on subscription. If you do not want to use or have access to LES, access can be disabled completely by following these steps {0}here{1}. If you are interested in purchasing an LES add-on subscription, please speak to your Liferay sales representative or contact Liferay Sales at {2}. (Automatic Copy)
+enterprise-product-notification-title[commerce]=Commerce (Automatic Copy)
+enterprise-product-notification-title[enterprise.search]=Liferay Enterprise Search (Automatic Copy)
 enters-task=يدخل المهمة:
 entire-series=السلاسل بكاملها
 entity=الكيان
+entity-attributes=Entity Attributes (Automatic Copy)
 entity-endpoint-enabled=تمكين نقطة نهاية الكيان
 entity-endpoint-enabled-description=تمكين وضع علامة تلقائيًا للمستندات باستخدام نقطة نهاية كيان واجهة Cloud Natural Language API.
 entity-id-help=معرَّف الكيان هو معرَّف فريد يمكن أن يصل طوله إلى 1024 حرفًا.
