--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
@@ -1119,6 +1119,7 @@ at-least-one-value-is-required=Es wird mindestens ein Wert benötigt.
 attachment-found-in-wiki-page-x=Anhang in Wikiseite {0} gefunden
 attend=Teilnehmen
 attribute=Attribut
+attribute-code=Attribute Code (Automatic Copy)
 attribute-mapping=Attributzuordnung
 attribute-mapping-help=Geben Sie die Attributzuordnung für die Attribute emailAddress, screenName, firstName, lastName und uuid an. Ein Attribut <strong>pro Zeile</strong>.
 attributes=Attribute
@@ -3367,9 +3368,14 @@ enter-url-that-contains-the-image-you-want-to-add=Geben Sie die URL des Bildes e
 enter-your-current-password-to-confirm-changes=Geben Sie Ihr aktuelles Kennwort ein, um die Änderungen zu bestätigen.
 enter-your-custom-css=Bitte geben Sie Ihre benutzerdefinierte CSS-Definitionen ein.
 enter-your-custom-css-class-names=Bitte geben Sie Ihre benutzerdefinierten CSS-Klassennamen ein.
+enterprise-product-notification-body[commerce]=Use of Liferay Commerce apps is not covered by Liferay Support and other subscription benefits without an active Liferay Commerce subscription. If you do not want to use or have access to Liferay Commerce, access can be disabled completely by following these steps {0}here{1}. If you are interested in purchasing a Liferay Commerce subscription, please speak to your Liferay sales representative or contact Liferay Sales at {2}. (Automatic Copy)
+enterprise-product-notification-body[enterprise.search]=Use of Liferay Enterprise Search (LES) apps and features is not covered by Liferay Support and other subscription benefits without an active LES add-on subscription. If you do not want to use or have access to LES, access can be disabled completely by following these steps {0}here{1}. If you are interested in purchasing an LES add-on subscription, please speak to your Liferay sales representative or contact Liferay Sales at {2}. (Automatic Copy)
+enterprise-product-notification-title[commerce]=Commerce (Automatic Copy)
+enterprise-product-notification-title[enterprise.search]=Liferay Enterprise Search (Automatic Copy)
 enters-task=Aufgabe betreten:
 entire-series=Gesamte Serie
 entity=Entität
+entity-attributes=Entity Attributes (Automatic Copy)
 entity-endpoint-enabled=Entität-Endpunkt aktiviert
 entity-endpoint-enabled-description=Aktivieren Sie das Auto-Tagging von Dokumenten mit dem Entität-Endpunkt der Cloud Natural Language API.
 entity-id-help=Die Entitäts-ID ist eine eindeutige Kennung, die bis zu 1024 Zeichen lang sein kann.
