--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_en.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_en.properties
@@ -1119,6 +1119,7 @@ at-least-one-value-is-required=At least one value is required.
 attachment-found-in-wiki-page-x=Attachment Found in Wiki Page {0}
 attend=Attend
 attribute=Attribute
+attribute-code=Attribute Code
 attribute-mapping=Attribute Mapping
 attribute-mapping-help=Enter attribute mapping for attributes emailAddress, screenName, firstName, lastName, and uuid. One attribute <strong>per line</strong>.
 attributes=Attributes
@@ -3367,9 +3368,14 @@ enter-url-that-contains-the-image-you-want-to-add=Enter the URL that contains th
 enter-your-current-password-to-confirm-changes=Enter your current password to confirm changes.
 enter-your-custom-css=Enter your custom CSS.
 enter-your-custom-css-class-names=Enter your custom CSS class names.
+enterprise-product-notification-body[commerce]=Use of Liferay Commerce apps is not covered by Liferay Support and other subscription benefits without an active Liferay Commerce subscription. If you do not want to use or have access to Liferay Commerce, access can be disabled completely by following these steps {0}here{1}. If you are interested in purchasing a Liferay Commerce subscription, please speak to your Liferay sales representative or contact Liferay Sales at {2}.
+enterprise-product-notification-body[enterprise.search]=Use of Liferay Enterprise Search (LES) apps and features is not covered by Liferay Support and other subscription benefits without an active LES add-on subscription. If you do not want to use or have access to LES, access can be disabled completely by following these steps {0}here{1}. If you are interested in purchasing an LES add-on subscription, please speak to your Liferay sales representative or contact Liferay Sales at {2}.
+enterprise-product-notification-title[commerce]=Commerce
+enterprise-product-notification-title[enterprise.search]=Liferay Enterprise Search
 enters-task=Enters Task:
 entire-series=Entire Series
 entity=Entity
+entity-attributes=Entity Attributes
 entity-endpoint-enabled=Entity Endpoint Enabled
 entity-endpoint-enabled-description=Enable auto tagging of text using the Cloud Natural Language API Entity endpoint.
 entity-id-help=Entity ID is a unique identifier that can be up to 1024 characters long.
