--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_en_GB.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_en_GB.properties
@@ -1119,6 +1119,7 @@ at-least-one-value-is-required=At least one value is required. (Automatic Copy)
 attachment-found-in-wiki-page-x=Attachment Found in Wiki Page {0} (Automatic Copy)
 attend=Attend (Automatic Copy)
 attribute=Attribute (Automatic Copy)
+attribute-code=Attribute Code (Automatic Copy)
 attribute-mapping=Attribute Mapping (Automatic Copy)
 attribute-mapping-help=Enter attribute mapping for attributes emailAddress, screenName, firstName, lastName, and uuid. One attribute <strong>per line</strong>. (Automatic Copy)
 attributes=Attributes (Automatic Copy)
@@ -3367,9 +3368,14 @@ enter-url-that-contains-the-image-you-want-to-add=Enter the URL that contains th
 enter-your-current-password-to-confirm-changes=Enter your current password to confirm changes. (Automatic Copy)
 enter-your-custom-css=Enter your custom CSS. (Automatic Copy)
 enter-your-custom-css-class-names=Enter your custom CSS class names. (Automatic Copy)
+enterprise-product-notification-body[commerce]=Use of Liferay Commerce apps is not covered by Liferay Support and other subscription benefits without an active Liferay Commerce subscription. If you do not want to use or have access to Liferay Commerce, access can be disabled completely by following these steps {0}here{1}. If you are interested in purchasing a Liferay Commerce subscription, please speak to your Liferay sales representative or contact Liferay Sales at {2}. (Automatic Copy)
+enterprise-product-notification-body[enterprise.search]=Use of Liferay Enterprise Search (LES) apps and features is not covered by Liferay Support and other subscription benefits without an active LES add-on subscription. If you do not want to use or have access to LES, access can be disabled completely by following these steps {0}here{1}. If you are interested in purchasing an LES add-on subscription, please speak to your Liferay sales representative or contact Liferay Sales at {2}. (Automatic Copy)
+enterprise-product-notification-title[commerce]=Commerce (Automatic Copy)
+enterprise-product-notification-title[enterprise.search]=Liferay Enterprise Search (Automatic Copy)
 enters-task=Enters Task: (Automatic Copy)
 entire-series=Entire Series (Automatic Copy)
 entity=Entity (Automatic Copy)
+entity-attributes=Entity Attributes (Automatic Copy)
 entity-endpoint-enabled=Entity Endpoint Enabled (Automatic Copy)
 entity-endpoint-enabled-description=Enable auto tagging of text using the Cloud Natural Language API Entity endpoint. (Automatic Copy)
 entity-id-help=Entity ID is a unique identifier that can be up to 1024 characters long. (Automatic Copy)
