--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
@@ -1119,6 +1119,7 @@ at-least-one-value-is-required=Se necesita al menos un valor.
 attachment-found-in-wiki-page-x=Adjunto encontrado en página de wiki {0}
 attend=Asistir
 attribute=Atributo
+attribute-code=Attribute Code (Automatic Copy)
 attribute-mapping=Asignación de atributos
 attribute-mapping-help=Escriba la asignación de atributos para los atributos emailAddress, screenName, firstName, lastName y uuid. Un atributo <strong>por línea</strong>.
 attributes=Atributos
@@ -3367,9 +3368,14 @@ enter-url-that-contains-the-image-you-want-to-add=Introduce una URL que contenga
 enter-your-current-password-to-confirm-changes=Escriba su contraseña actual para confirmar los cambios.
 enter-your-custom-css=Introduzca estilos CSS a medida.
 enter-your-custom-css-class-names=Introduzca sus nombres de clases CSS personalizados.
+enterprise-product-notification-body[commerce]=Use of Liferay Commerce apps is not covered by Liferay Support and other subscription benefits without an active Liferay Commerce subscription. If you do not want to use or have access to Liferay Commerce, access can be disabled completely by following these steps {0}here{1}. If you are interested in purchasing a Liferay Commerce subscription, please speak to your Liferay sales representative or contact Liferay Sales at {2}. (Automatic Copy)
+enterprise-product-notification-body[enterprise.search]=Use of Liferay Enterprise Search (LES) apps and features is not covered by Liferay Support and other subscription benefits without an active LES add-on subscription. If you do not want to use or have access to LES, access can be disabled completely by following these steps {0}here{1}. If you are interested in purchasing an LES add-on subscription, please speak to your Liferay sales representative or contact Liferay Sales at {2}. (Automatic Copy)
+enterprise-product-notification-title[commerce]=Commerce (Automatic Copy)
+enterprise-product-notification-title[enterprise.search]=Liferay Enterprise Search (Automatic Copy)
 enters-task=Inicia la tarea:
 entire-series=Toda la serie
 entity=Entidad
+entity-attributes=Entity Attributes (Automatic Copy)
 entity-endpoint-enabled=Endpoint de entidad habilitado
 entity-endpoint-enabled-description=Habilita el etiquetado automático de documentos mediante el endpoint de entidad de la API de Cloud Natural Language.
 entity-id-help=ID de entidad es un identificador único que puede tener 1024 caracteres de longitud como máximo.
