--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
@@ -1119,6 +1119,7 @@ at-least-one-value-is-required=Nõutav on vähemalt üks väärtus. (Automatic T
 attachment-found-in-wiki-page-x=Attachment Found in Wiki Page {0} (Automatic Copy)
 attend=Osaleda (Automatic Translation)
 attribute=tunnus (Automatic Translation)
+attribute-code=Attribute Code (Automatic Copy)
 attribute-mapping=Atribuudi vastendamine (Automatic Translation)
 attribute-mapping-help=Enter attribute mapping for attributes emailAddress, screenName, firstName, lastName, and uuid. One attribute <strong>per line</strong>. (Automatic Copy)
 attributes=Atribuudid (Automatic Translation)
@@ -3367,9 +3368,14 @@ enter-url-that-contains-the-image-you-want-to-add=Sisestage URL, mis sisaldab pi
 enter-your-current-password-to-confirm-changes=Muudatuste kinnitamiseks sisestage oma praegune parool. (Automatic Translation)
 enter-your-custom-css=Sisesta oma kohandatud CSS.
 enter-your-custom-css-class-names=Sisestage oma kohandatud CSS-klassi nimed. (Automatic Translation)
+enterprise-product-notification-body[commerce]=Use of Liferay Commerce apps is not covered by Liferay Support and other subscription benefits without an active Liferay Commerce subscription. If you do not want to use or have access to Liferay Commerce, access can be disabled completely by following these steps {0}here{1}. If you are interested in purchasing a Liferay Commerce subscription, please speak to your Liferay sales representative or contact Liferay Sales at {2}. (Automatic Copy)
+enterprise-product-notification-body[enterprise.search]=Use of Liferay Enterprise Search (LES) apps and features is not covered by Liferay Support and other subscription benefits without an active LES add-on subscription. If you do not want to use or have access to LES, access can be disabled completely by following these steps {0}here{1}. If you are interested in purchasing an LES add-on subscription, please speak to your Liferay sales representative or contact Liferay Sales at {2}. (Automatic Copy)
+enterprise-product-notification-title[commerce]=Commerce (Automatic Copy)
+enterprise-product-notification-title[enterprise.search]=Liferay Enterprise Search (Automatic Copy)
 enters-task=Sisestab tööülesande: (Automatic Translation)
 entire-series=Terve seeria (Automatic Translation)
 entity=Olemi (Automatic Translation)
+entity-attributes=Entity Attributes (Automatic Copy)
 entity-endpoint-enabled=Olemi lõpp-punkt on lubatud (Automatic Translation)
 entity-endpoint-enabled-description=Saate lubada teksti automaatse sildistamise pilve loomuliku keele API olemi lõpp-punkti abil. (Automatic Translation)
 entity-id-help=Olemi ID on ainuidentifikaator, mis võib olla kuni 1024 märki pikk. (Automatic Translation)
