--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
@@ -1119,6 +1119,7 @@ at-least-one-value-is-required=Au moins une valeur est requise.
 attachment-found-in-wiki-page-x=Pièce jointe trouvée dans la page Wiki {0}
 attend=Participer
 attribute=Attribut
+attribute-code=Attribute Code (Automatic Copy)
 attribute-mapping=Mappage des attributs
 attribute-mapping-help=Saisissez un mappage d'attributs pour attributes emailAddress, screenName, firstName, lastName et uuid. Un attribut <strong>par ligne</strong>.
 attributes=Attributs
@@ -3367,9 +3368,14 @@ enter-url-that-contains-the-image-you-want-to-add=Entrer l'URL qui contient l'im
 enter-your-current-password-to-confirm-changes=Saisissez votre mot de passe actuel pour confirmer les modifications.
 enter-your-custom-css=Écrivez votre coutume CSS.
 enter-your-custom-css-class-names=Écrivez vos noms de classe de la coutume CSS.
+enterprise-product-notification-body[commerce]=Use of Liferay Commerce apps is not covered by Liferay Support and other subscription benefits without an active Liferay Commerce subscription. If you do not want to use or have access to Liferay Commerce, access can be disabled completely by following these steps {0}here{1}. If you are interested in purchasing a Liferay Commerce subscription, please speak to your Liferay sales representative or contact Liferay Sales at {2}. (Automatic Copy)
+enterprise-product-notification-body[enterprise.search]=Use of Liferay Enterprise Search (LES) apps and features is not covered by Liferay Support and other subscription benefits without an active LES add-on subscription. If you do not want to use or have access to LES, access can be disabled completely by following these steps {0}here{1}. If you are interested in purchasing an LES add-on subscription, please speak to your Liferay sales representative or contact Liferay Sales at {2}. (Automatic Copy)
+enterprise-product-notification-title[commerce]=Commerce (Automatic Copy)
+enterprise-product-notification-title[enterprise.search]=Liferay Enterprise Search (Automatic Copy)
 enters-task=Entre dans la tâche :
 entire-series=Séries complètes
 entity=Entité
+entity-attributes=Entity Attributes (Automatic Copy)
 entity-endpoint-enabled=Point de terminaison d'entité activé
 entity-endpoint-enabled-description=Activer le marquage automatique des documents en utilisant le point de terminaison de l'API Cloud Natural Language.
 entity-id-help=L'ID d'entité est un identificateur unique qui peut contenir jusqu'à 1024 caractères.
