--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
@@ -1119,6 +1119,7 @@ at-least-one-value-is-required=È richiesto almeno un valore.
 attachment-found-in-wiki-page-x=Allegato Trovato nella Pagina Wiki {0}
 attend=Partecipa
 attribute=attributo (Automatic Translation)
+attribute-code=Attribute Code (Automatic Copy)
 attribute-mapping=Mapping attributi (Automatic Translation)
 attribute-mapping-help=Enter attribute mapping for attributes emailAddress, screenName, firstName, lastName, and uuid. One attribute <strong>per line</strong>. (Automatic Copy)
 attributes=Attributi (Automatic Translation)
@@ -3367,9 +3368,14 @@ enter-url-that-contains-the-image-you-want-to-add=Inserisci URL che contiene l'i
 enter-your-current-password-to-confirm-changes=Immettere la password corrente per confermare le modifiche. (Automatic Translation)
 enter-your-custom-css=Inserisci il tuo CSS personalizzato.
 enter-your-custom-css-class-names=Inserisci i nomi delle classi CSS personalizzati.
+enterprise-product-notification-body[commerce]=Use of Liferay Commerce apps is not covered by Liferay Support and other subscription benefits without an active Liferay Commerce subscription. If you do not want to use or have access to Liferay Commerce, access can be disabled completely by following these steps {0}here{1}. If you are interested in purchasing a Liferay Commerce subscription, please speak to your Liferay sales representative or contact Liferay Sales at {2}. (Automatic Copy)
+enterprise-product-notification-body[enterprise.search]=Use of Liferay Enterprise Search (LES) apps and features is not covered by Liferay Support and other subscription benefits without an active LES add-on subscription. If you do not want to use or have access to LES, access can be disabled completely by following these steps {0}here{1}. If you are interested in purchasing an LES add-on subscription, please speak to your Liferay sales representative or contact Liferay Sales at {2}. (Automatic Copy)
+enterprise-product-notification-title[commerce]=Commerce (Automatic Copy)
+enterprise-product-notification-title[enterprise.search]=Liferay Enterprise Search (Automatic Copy)
 enters-task=Entra nell'attività: (Automatic Translation)
 entire-series=Tutta le serie
 entity=entità (Automatic Translation)
+entity-attributes=Entity Attributes (Automatic Copy)
 entity-endpoint-enabled=Endpoint entità abilitato (Automatic Translation)
 entity-endpoint-enabled-description=Abilitare l'assegnazione automatica di tag al testo tramite l'endpoint dell'entità API cloud natural language. (Automatic Translation)
 entity-id-help=L'ID entità è un identificatore univoco che può avere una lunghezza fino a 1024 caratteri. (Automatic Translation)
