--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
@@ -1119,6 +1119,7 @@ at-least-one-value-is-required=少なくとも 値が1 つは必要です
 attachment-found-in-wiki-page-x=Wikiページ{0} に添付ファイルが見つかりました。
 attend=参加しますか
 attribute=属性
+attribute-code=Attribute Code (Automatic Copy)
 attribute-mapping=属性マッピング
 attribute-mapping-help=emailAddress, screenName, firstName, lastName, uuidの属性マッピングを入力します。<strong>１行毎</strong>に属性を入力してください。
 attributes=属性
@@ -3367,9 +3368,14 @@ enter-url-that-contains-the-image-you-want-to-add=追加したい画像を含む
 enter-your-current-password-to-confirm-changes=変更を確定するには、現在のパスワードを入力してください。
 enter-your-custom-css=カスタムCSSを入力してください。
 enter-your-custom-css-class-names=カスタムCSSクラス名を入力してください。
+enterprise-product-notification-body[commerce]=Use of Liferay Commerce apps is not covered by Liferay Support and other subscription benefits without an active Liferay Commerce subscription. If you do not want to use or have access to Liferay Commerce, access can be disabled completely by following these steps {0}here{1}. If you are interested in purchasing a Liferay Commerce subscription, please speak to your Liferay sales representative or contact Liferay Sales at {2}. (Automatic Copy)
+enterprise-product-notification-body[enterprise.search]=Use of Liferay Enterprise Search (LES) apps and features is not covered by Liferay Support and other subscription benefits without an active LES add-on subscription. If you do not want to use or have access to LES, access can be disabled completely by following these steps {0}here{1}. If you are interested in purchasing an LES add-on subscription, please speak to your Liferay sales representative or contact Liferay Sales at {2}. (Automatic Copy)
+enterprise-product-notification-title[commerce]=Commerce (Automatic Copy)
+enterprise-product-notification-title[enterprise.search]=Liferay Enterprise Search (Automatic Copy)
 enters-task=タスクを開始:
 entire-series=すべてのイベント
 entity=エンティティ
+entity-attributes=Entity Attributes (Automatic Copy)
 entity-endpoint-enabled=エンティティエンドポイントを有効
 entity-endpoint-enabled-description=Cloud Natural Language APIのエンティティエンドポイントを使用してドキュメントの自動タグ付けを有効にします。
 entity-id-help=エンティティIDは最大1024文字の一意な識別子である必要があります。
