--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
@@ -1119,6 +1119,7 @@ at-least-one-value-is-required=Reikia bent vienos reikšmės. (Automatic Transla
 attachment-found-in-wiki-page-x=Attachment Found in Wiki Page {0} (Automatic Copy)
 attend=lankyti (Automatic Translation)
 attribute=Atributas (Automatic Translation)
+attribute-code=Attribute Code (Automatic Copy)
 attribute-mapping=Atributų susiejimas (Automatic Translation)
 attribute-mapping-help=Enter attribute mapping for attributes emailAddress, screenName, firstName, lastName, and uuid. One attribute <strong>per line</strong>. (Automatic Copy)
 attributes=Atributus (Automatic Translation)
@@ -3367,9 +3368,14 @@ enter-url-that-contains-the-image-you-want-to-add=Įveskite URL, kuriame yra nor
 enter-your-current-password-to-confirm-changes=Įveskite dabartinį slaptažodį, kad patvirtintumėte pakeitimus. (Automatic Translation)
 enter-your-custom-css=Įveskite pasirinktinį CSS. (Automatic Translation)
 enter-your-custom-css-class-names=Įveskite pasirinktinius CSS klasių pavadinimus. (Automatic Translation)
+enterprise-product-notification-body[commerce]=Use of Liferay Commerce apps is not covered by Liferay Support and other subscription benefits without an active Liferay Commerce subscription. If you do not want to use or have access to Liferay Commerce, access can be disabled completely by following these steps {0}here{1}. If you are interested in purchasing a Liferay Commerce subscription, please speak to your Liferay sales representative or contact Liferay Sales at {2}. (Automatic Copy)
+enterprise-product-notification-body[enterprise.search]=Use of Liferay Enterprise Search (LES) apps and features is not covered by Liferay Support and other subscription benefits without an active LES add-on subscription. If you do not want to use or have access to LES, access can be disabled completely by following these steps {0}here{1}. If you are interested in purchasing an LES add-on subscription, please speak to your Liferay sales representative or contact Liferay Sales at {2}. (Automatic Copy)
+enterprise-product-notification-title[commerce]=Commerce (Automatic Copy)
+enterprise-product-notification-title[enterprise.search]=Liferay Enterprise Search (Automatic Copy)
 enters-task=Įveda užduotį: (Automatic Translation)
 entire-series=Visa serija (Automatic Translation)
 entity=subjektas (Automatic Translation)
+entity-attributes=Entity Attributes (Automatic Copy)
 entity-endpoint-enabled=Įgalintas objekto galinis punktas (Automatic Translation)
 entity-endpoint-enabled-description=Įgalinti automatinį teksto žymėjimą naudojant debesies natūralios kalbos API objekto galinį punktą. (Automatic Translation)
 entity-id-help=Objekto ID yra unikalus identifikatorius, kuris gali būti iki 1024 simbolių ilgio. (Automatic Translation)
