--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
@@ -1119,6 +1119,7 @@ at-least-one-value-is-required=Sekurang-kurangnya satu nilai diperlukan. (Automa
 attachment-found-in-wiki-page-x=Attachment Found in Wiki Page {0} (Automatic Copy)
 attend=Menghadiri (Automatic Translation)
 attribute=Atribut (Automatic Translation)
+attribute-code=Attribute Code (Automatic Copy)
 attribute-mapping=Pemetaan Atribut (Automatic Translation)
 attribute-mapping-help=Enter attribute mapping for attributes emailAddress, screenName, firstName, lastName, and uuid. One attribute <strong>per line</strong>. (Automatic Copy)
 attributes=Atribut (Automatic Translation)
@@ -3367,9 +3368,14 @@ enter-url-that-contains-the-image-you-want-to-add=Masukkan URL yang mengandungi 
 enter-your-current-password-to-confirm-changes=Masukkan kata laluan semasa anda untuk mengesahkan perubahan. (Automatic Translation)
 enter-your-custom-css=Masukkan CSS tersuai anda. (Automatic Translation)
 enter-your-custom-css-class-names=Masukkan nama kelas CSS tersuai anda. (Automatic Translation)
+enterprise-product-notification-body[commerce]=Use of Liferay Commerce apps is not covered by Liferay Support and other subscription benefits without an active Liferay Commerce subscription. If you do not want to use or have access to Liferay Commerce, access can be disabled completely by following these steps {0}here{1}. If you are interested in purchasing a Liferay Commerce subscription, please speak to your Liferay sales representative or contact Liferay Sales at {2}. (Automatic Copy)
+enterprise-product-notification-body[enterprise.search]=Use of Liferay Enterprise Search (LES) apps and features is not covered by Liferay Support and other subscription benefits without an active LES add-on subscription. If you do not want to use or have access to LES, access can be disabled completely by following these steps {0}here{1}. If you are interested in purchasing an LES add-on subscription, please speak to your Liferay sales representative or contact Liferay Sales at {2}. (Automatic Copy)
+enterprise-product-notification-title[commerce]=Commerce (Automatic Copy)
+enterprise-product-notification-title[enterprise.search]=Liferay Enterprise Search (Automatic Copy)
 enters-task=Masukkan Tugas: (Automatic Translation)
 entire-series=Keseluruhan Siri (Automatic Translation)
 entity=Entiti (Automatic Translation)
+entity-attributes=Entity Attributes (Automatic Copy)
 entity-endpoint-enabled=Titik Akhir Entiti Didayakan (Automatic Translation)
 entity-endpoint-enabled-description=Dayakan penandaan auto teks menggunakan titik akhir Entiti API Bahasa Asli Awan. (Automatic Translation)
 entity-id-help=ID Entiti adalah pengecam unik yang boleh sehingga 1024 aksara panjang. (Automatic Translation)
