--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
@@ -1119,6 +1119,7 @@ at-least-one-value-is-required=Minst en verdi er påkrevd.
 attachment-found-in-wiki-page-x=Vedlegg funnet på wiki-siden {0}
 attend=Delta
 attribute=attributt (Automatic Translation)
+attribute-code=Attribute Code (Automatic Copy)
 attribute-mapping=Tilordning av attributter (Automatic Translation)
 attribute-mapping-help=Enter attribute mapping for attributes emailAddress, screenName, firstName, lastName, and uuid. One attribute <strong>per line</strong>. (Automatic Copy)
 attributes=Attributter (Automatic Translation)
@@ -3367,9 +3368,14 @@ enter-url-that-contains-the-image-you-want-to-add=Angi URL-en som inneholder bil
 enter-your-current-password-to-confirm-changes=Skriv inn gjeldende passord for å bekrefte endringer. (Automatic Translation)
 enter-your-custom-css=Skriv inn din tilpassede CSS.
 enter-your-custom-css-class-names=Legg inn dine egendefinerte CSS-klassenavn.
+enterprise-product-notification-body[commerce]=Use of Liferay Commerce apps is not covered by Liferay Support and other subscription benefits without an active Liferay Commerce subscription. If you do not want to use or have access to Liferay Commerce, access can be disabled completely by following these steps {0}here{1}. If you are interested in purchasing a Liferay Commerce subscription, please speak to your Liferay sales representative or contact Liferay Sales at {2}. (Automatic Copy)
+enterprise-product-notification-body[enterprise.search]=Use of Liferay Enterprise Search (LES) apps and features is not covered by Liferay Support and other subscription benefits without an active LES add-on subscription. If you do not want to use or have access to LES, access can be disabled completely by following these steps {0}here{1}. If you are interested in purchasing an LES add-on subscription, please speak to your Liferay sales representative or contact Liferay Sales at {2}. (Automatic Copy)
+enterprise-product-notification-title[commerce]=Commerce (Automatic Copy)
+enterprise-product-notification-title[enterprise.search]=Liferay Enterprise Search (Automatic Copy)
 enters-task=Angir oppgave: (Automatic Translation)
 entire-series=Hele serier
 entity=enhet (Automatic Translation)
+entity-attributes=Entity Attributes (Automatic Copy)
 entity-endpoint-enabled=Entitet koblingpunkt aktivert
 entity-endpoint-enabled-description=Aktiver autokategorisering av tekst ved hjelp av Cloud Natural Language API entitet koblingpunkt.
 entity-id-help=Enhets-ID er en unik identifikator som kan inneholde opptil 1 024 tegn. (Automatic Translation)
