--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
@@ -1119,6 +1119,7 @@ at-least-one-value-is-required=Wymagana jest co najmniej jedna wartość. (Autom
 attachment-found-in-wiki-page-x=Znaleziono załącznik na stronie wiki {0}
 attend=Uczestnicz
 attribute=Atrybut (Automatic Translation)
+attribute-code=Attribute Code (Automatic Copy)
 attribute-mapping=Mapowanie atrybutów (Automatic Translation)
 attribute-mapping-help=Enter attribute mapping for attributes emailAddress, screenName, firstName, lastName, and uuid. One attribute <strong>per line</strong>. (Automatic Copy)
 attributes=Atrybuty (Automatic Translation)
@@ -3367,9 +3368,14 @@ enter-url-that-contains-the-image-you-want-to-add=Wprowadź adres URL zawierają
 enter-your-current-password-to-confirm-changes=Wprowadź bieżące hasło, aby potwierdzić zmiany. (Automatic Translation)
 enter-your-custom-css=Wprowadź swój niestandardowy CSS.
 enter-your-custom-css-class-names=Wprowadź swoje niestandardowe nazwy klas CC.
+enterprise-product-notification-body[commerce]=Use of Liferay Commerce apps is not covered by Liferay Support and other subscription benefits without an active Liferay Commerce subscription. If you do not want to use or have access to Liferay Commerce, access can be disabled completely by following these steps {0}here{1}. If you are interested in purchasing a Liferay Commerce subscription, please speak to your Liferay sales representative or contact Liferay Sales at {2}. (Automatic Copy)
+enterprise-product-notification-body[enterprise.search]=Use of Liferay Enterprise Search (LES) apps and features is not covered by Liferay Support and other subscription benefits without an active LES add-on subscription. If you do not want to use or have access to LES, access can be disabled completely by following these steps {0}here{1}. If you are interested in purchasing an LES add-on subscription, please speak to your Liferay sales representative or contact Liferay Sales at {2}. (Automatic Copy)
+enterprise-product-notification-title[commerce]=Commerce (Automatic Copy)
+enterprise-product-notification-title[enterprise.search]=Liferay Enterprise Search (Automatic Copy)
 enters-task=Wchodzi zadanie: (Automatic Translation)
 entire-series=Cała seria (Automatic Translation)
 entity=jednostka (Automatic Translation)
+entity-attributes=Entity Attributes (Automatic Copy)
 entity-endpoint-enabled=Włączony punkt końcowy encji (Automatic Translation)
 entity-endpoint-enabled-description=Włącz automatyczne tagowanie tekstu przy użyciu punktu końcowego jednostki interfejsu API języka naturalnego w chmurze. (Automatic Translation)
 entity-id-help=Identyfikator jednostki to unikatowy identyfikator o długości do 1024 znaków. (Automatic Translation)
