--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
@@ -1119,6 +1119,7 @@ at-least-one-value-is-required=Pelo menos um valor necessário.
 attachment-found-in-wiki-page-x=Anexo encontrado na página da wiki {0}
 attend=Participar
 attribute=Atributo
+attribute-code=Attribute Code (Automatic Copy)
 attribute-mapping=Mapeamento de Atributos
 attribute-mapping-help=Especifique o mapeamento de atributos para emailAddress, screenName, firstName, lastName e uuid. Um atributo <strong>por linha</strong>.
 attributes=Atributos
@@ -3367,9 +3368,14 @@ enter-url-that-contains-the-image-you-want-to-add=Insira a URL contendo a imagem
 enter-your-current-password-to-confirm-changes=Insira sua senha atual para confirmar a mudança.
 enter-your-custom-css=Insira seu CSS personalizado.
 enter-your-custom-css-class-names=Insira o nome das suas classes CSS customizadas.
+enterprise-product-notification-body[commerce]=Use of Liferay Commerce apps is not covered by Liferay Support and other subscription benefits without an active Liferay Commerce subscription. If you do not want to use or have access to Liferay Commerce, access can be disabled completely by following these steps {0}here{1}. If you are interested in purchasing a Liferay Commerce subscription, please speak to your Liferay sales representative or contact Liferay Sales at {2}. (Automatic Copy)
+enterprise-product-notification-body[enterprise.search]=Use of Liferay Enterprise Search (LES) apps and features is not covered by Liferay Support and other subscription benefits without an active LES add-on subscription. If you do not want to use or have access to LES, access can be disabled completely by following these steps {0}here{1}. If you are interested in purchasing an LES add-on subscription, please speak to your Liferay sales representative or contact Liferay Sales at {2}. (Automatic Copy)
+enterprise-product-notification-title[commerce]=Commerce (Automatic Copy)
+enterprise-product-notification-title[enterprise.search]=Liferay Enterprise Search (Automatic Copy)
 enters-task=Entra na tarefa:
 entire-series=Toda a série
 entity=Entidade
+entity-attributes=Entity Attributes (Automatic Copy)
 entity-endpoint-enabled=Ponto de Extremidade da Entidade Ativado
 entity-endpoint-enabled-description=Ativar a marcação automática dos documentos usando o ponto de extremidade da Entidade da API de Linguagem Natural da Nuvem.
 entity-id-help=O ID da Entidade é um identificador exclusivo, que pode ter até 1024 caracteres.
