--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
@@ -1119,6 +1119,7 @@ at-least-one-value-is-required=Este necesară cel puțin o valoare. (Automatic T
 attachment-found-in-wiki-page-x=Attachment Found in Wiki Page {0} (Automatic Copy)
 attend=a frecventa (Automatic Translation)
 attribute=atribut (Automatic Translation)
+attribute-code=Attribute Code (Automatic Copy)
 attribute-mapping=Mapare atribute (Automatic Translation)
 attribute-mapping-help=Enter attribute mapping for attributes emailAddress, screenName, firstName, lastName, and uuid. One attribute <strong>per line</strong>. (Automatic Copy)
 attributes=Atribute (Automatic Translation)
@@ -3367,9 +3368,14 @@ enter-url-that-contains-the-image-you-want-to-add=Introduceți ADRESA URL care c
 enter-your-current-password-to-confirm-changes=Introduceți parola curentă pentru a confirma modificările. (Automatic Translation)
 enter-your-custom-css=Introdu CSS-ul editabil.
 enter-your-custom-css-class-names=Introdu numele editabil de clase CSS.
+enterprise-product-notification-body[commerce]=Use of Liferay Commerce apps is not covered by Liferay Support and other subscription benefits without an active Liferay Commerce subscription. If you do not want to use or have access to Liferay Commerce, access can be disabled completely by following these steps {0}here{1}. If you are interested in purchasing a Liferay Commerce subscription, please speak to your Liferay sales representative or contact Liferay Sales at {2}. (Automatic Copy)
+enterprise-product-notification-body[enterprise.search]=Use of Liferay Enterprise Search (LES) apps and features is not covered by Liferay Support and other subscription benefits without an active LES add-on subscription. If you do not want to use or have access to LES, access can be disabled completely by following these steps {0}here{1}. If you are interested in purchasing an LES add-on subscription, please speak to your Liferay sales representative or contact Liferay Sales at {2}. (Automatic Copy)
+enterprise-product-notification-title[commerce]=Commerce (Automatic Copy)
+enterprise-product-notification-title[enterprise.search]=Liferay Enterprise Search (Automatic Copy)
 enters-task=Introduce activitate: (Automatic Translation)
 entire-series=Întreaga serie (Automatic Translation)
 entity=entitate (Automatic Translation)
+entity-attributes=Entity Attributes (Automatic Copy)
 entity-endpoint-enabled=Punct final entitate activat (Automatic Translation)
 entity-endpoint-enabled-description=Activați etichetarea automată a textului utilizând punctul final al entității API Limbă naturală în cloud. (Automatic Translation)
 entity-id-help=ID-ul de entitate este un identificator unic care poate avea o lungime de până la 1024 de caractere. (Automatic Translation)
