--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
@@ -1119,6 +1119,7 @@ at-least-one-value-is-required=Vyžaduje sa aspoň jedna hodnota. (Automatic Tra
 attachment-found-in-wiki-page-x=Príloha nájdená na wiki stránke {0}
 attend=Zúčastniť sa
 attribute=vlastnosť (Automatic Translation)
+attribute-code=Attribute Code (Automatic Copy)
 attribute-mapping=Priradenie atribútov (Automatic Translation)
 attribute-mapping-help=Enter attribute mapping for attributes emailAddress, screenName, firstName, lastName, and uuid. One attribute <strong>per line</strong>. (Automatic Copy)
 attributes=Atribúty (Automatic Translation)
@@ -3367,9 +3368,14 @@ enter-url-that-contains-the-image-you-want-to-add=Zadajte URL adresu, ktorá obs
 enter-your-current-password-to-confirm-changes=Ak chcete potvrdiť zmeny, zadajte aktuálne heslo. (Automatic Translation)
 enter-your-custom-css=Zadajte svoje vlastné CSS.
 enter-your-custom-css-class-names=Zadajte svoje vlastné mená CSS tried.
+enterprise-product-notification-body[commerce]=Use of Liferay Commerce apps is not covered by Liferay Support and other subscription benefits without an active Liferay Commerce subscription. If you do not want to use or have access to Liferay Commerce, access can be disabled completely by following these steps {0}here{1}. If you are interested in purchasing a Liferay Commerce subscription, please speak to your Liferay sales representative or contact Liferay Sales at {2}. (Automatic Copy)
+enterprise-product-notification-body[enterprise.search]=Use of Liferay Enterprise Search (LES) apps and features is not covered by Liferay Support and other subscription benefits without an active LES add-on subscription. If you do not want to use or have access to LES, access can be disabled completely by following these steps {0}here{1}. If you are interested in purchasing an LES add-on subscription, please speak to your Liferay sales representative or contact Liferay Sales at {2}. (Automatic Copy)
+enterprise-product-notification-title[commerce]=Commerce (Automatic Copy)
+enterprise-product-notification-title[enterprise.search]=Liferay Enterprise Search (Automatic Copy)
 enters-task=Zadá úlohu: (Automatic Translation)
 entire-series=Celá séria (Automatic Translation)
 entity=entita (Automatic Translation)
+entity-attributes=Entity Attributes (Automatic Copy)
 entity-endpoint-enabled=Koncový bod entity povolený (Automatic Translation)
 entity-endpoint-enabled-description=Povoľte automatické označovanie textu pomocou koncového bodu entity rozhrania Cloud Natural Language API. (Automatic Translation)
 entity-id-help=Identifikácia entity je jedinečný identifikátor, ktorý môže mať až 1 024 znakov. (Automatic Translation)
