--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -1119,6 +1119,7 @@ at-least-one-value-is-required=Minst ett värde krävs.
 attachment-found-in-wiki-page-x=Bilaga hittades på wiki-sidan {0}
 attend=Delta
 attribute=Attribut
+attribute-code=Attribute Code (Automatic Copy)
 attribute-mapping=Attributmappning
 attribute-mapping-help=Ange attributmappning för attributen emailAddress, screenName, firstName, lastName och uuid. Ett attribut <strong>per rad</strong>.
 attributes=Attribut
@@ -3367,9 +3368,14 @@ enter-url-that-contains-the-image-you-want-to-add=Ange URL som innehåller bilde
 enter-your-current-password-to-confirm-changes=Ange ditt nuvarande lösenord för att bekräfta ändringarna.
 enter-your-custom-css=Lägg in ditt egna CSS.
 enter-your-custom-css-class-names=Ange namnen på dina egna CSS-klasser.
+enterprise-product-notification-body[commerce]=Use of Liferay Commerce apps is not covered by Liferay Support and other subscription benefits without an active Liferay Commerce subscription. If you do not want to use or have access to Liferay Commerce, access can be disabled completely by following these steps {0}here{1}. If you are interested in purchasing a Liferay Commerce subscription, please speak to your Liferay sales representative or contact Liferay Sales at {2}. (Automatic Copy)
+enterprise-product-notification-body[enterprise.search]=Use of Liferay Enterprise Search (LES) apps and features is not covered by Liferay Support and other subscription benefits without an active LES add-on subscription. If you do not want to use or have access to LES, access can be disabled completely by following these steps {0}here{1}. If you are interested in purchasing an LES add-on subscription, please speak to your Liferay sales representative or contact Liferay Sales at {2}. (Automatic Copy)
+enterprise-product-notification-title[commerce]=Commerce (Automatic Copy)
+enterprise-product-notification-title[enterprise.search]=Liferay Enterprise Search (Automatic Copy)
 enters-task=Anger uppgift:
 entire-series=Hela serien
 entity=Enhet
+entity-attributes=Entity Attributes (Automatic Copy)
 entity-endpoint-enabled=Enhetsslutpunkt aktiverad
 entity-endpoint-enabled-description=Aktivera automatisk taggning av dokument som använder enhetsslutpunkt för Cloud Natural Language-API.
 entity-id-help=Enhets-ID är en unik identifierare som kan bestå av 1024 tecken.
