--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
@@ -1119,6 +1119,7 @@ at-least-one-value-is-required=Cần ít nhất một giá trị. (Automatic Tra
 attachment-found-in-wiki-page-x=Bình luận tìm thấy tại Trang Wiki {0}
 attend=góp mặt (Automatic Translation)
 attribute=thuộc tính (Automatic Translation)
+attribute-code=Attribute Code (Automatic Copy)
 attribute-mapping=Ánh xạ thuộc tính (Automatic Translation)
 attribute-mapping-help=Enter attribute mapping for attributes emailAddress, screenName, firstName, lastName, and uuid. One attribute <strong>per line</strong>. (Automatic Copy)
 attributes=Thuộc tính (Automatic Translation)
@@ -3367,9 +3368,14 @@ enter-url-that-contains-the-image-you-want-to-add=Nhập URL chứa hình ảnh 
 enter-your-current-password-to-confirm-changes=Nhập mật khẩu hiện tại của bạn để xác nhận thay đổi. (Automatic Translation)
 enter-your-custom-css=Nhập vào nội dung CSS tùy biến của bạn.
 enter-your-custom-css-class-names=Nhập vào tên lớp nội dung CSS tùy biến của bạn.
+enterprise-product-notification-body[commerce]=Use of Liferay Commerce apps is not covered by Liferay Support and other subscription benefits without an active Liferay Commerce subscription. If you do not want to use or have access to Liferay Commerce, access can be disabled completely by following these steps {0}here{1}. If you are interested in purchasing a Liferay Commerce subscription, please speak to your Liferay sales representative or contact Liferay Sales at {2}. (Automatic Copy)
+enterprise-product-notification-body[enterprise.search]=Use of Liferay Enterprise Search (LES) apps and features is not covered by Liferay Support and other subscription benefits without an active LES add-on subscription. If you do not want to use or have access to LES, access can be disabled completely by following these steps {0}here{1}. If you are interested in purchasing an LES add-on subscription, please speak to your Liferay sales representative or contact Liferay Sales at {2}. (Automatic Copy)
+enterprise-product-notification-title[commerce]=Commerce (Automatic Copy)
+enterprise-product-notification-title[enterprise.search]=Liferay Enterprise Search (Automatic Copy)
 enters-task=Nhập Nhiệm vụ: (Automatic Translation)
 entire-series=Toàn bộ sê-ri (Automatic Translation)
 entity=thực thể (Automatic Translation)
+entity-attributes=Entity Attributes (Automatic Copy)
 entity-endpoint-enabled=Đã bật Điểm cuối Thực thể (Automatic Translation)
 entity-endpoint-enabled-description=Cho phép tự động gắn thẻ văn bản bằng điểm cuối Thực thể API Ngôn ngữ Tự nhiên Đám mây. (Automatic Translation)
 entity-id-help=ID thực thể là một mã định danh duy nhất có thể dài tới 1024 ký tự. (Automatic Translation)
