--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
@@ -14271,6 +14271,7 @@ styles-by-default=أنماط افتراضية
 styles-from-master=أنماط من الرئيسي
 styles-from-theme=أنماط من الموضوع
 stylesheet=صفحة الأسلوب
+sub-total=Sub Total (Automatic Copy)
 subcategories=التصنيفات الفرعية
 subcategories[message-board]=التصنيفات الفرعية
 subcategory[message-board]=التصنيفات الفرعية
