--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
@@ -14271,6 +14271,7 @@ styles-by-default=Styles by Default (Automatic Copy)
 styles-from-master=Styles from Master (Automatic Copy)
 styles-from-theme=Styles from Theme (Automatic Copy)
 stylesheet=Stiilistiku (Automatic Translation)
+sub-total=Sub Total (Automatic Copy)
 subcategories=Alamkategooriad
 subcategories[message-board]=Alamkategooriad
 subcategory[message-board]=Alamkategooriad
