--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
@@ -14271,6 +14271,7 @@ styles-by-default=Styles by Default (Automatic Copy)
 styles-from-master=Styles from Master (Automatic Copy)
 styles-from-theme=Styles from Theme (Automatic Copy)
 stylesheet=استایل صفحه
+sub-total=Sub Total (Automatic Copy)
 subcategories=زیرمجموعه‌ها
 subcategories[message-board]=زیرگروه‌ها
 subcategory[message-board]=زیرمجموعه‌
