--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -14270,6 +14270,7 @@ styles-by-default=Tyylit oletuksena
 styles-from-master=Tyylit päätasolta
 styles-from-theme=Tyylit teemasta
 stylesheet=Tyylitiedosto
+sub-total=Sub Total (Automatic Copy)
 subcategories=Aliluokitukset
 subcategories[message-board]=Ala-aihealueet
 subcategory[message-board]=Aliluokitukset
