--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hr.properties
@@ -14271,6 +14271,7 @@ styles-by-default=Styles by Default (Automatic Copy)
 styles-from-master=Styles from Master (Automatic Copy)
 styles-from-theme=Styles from Theme (Automatic Copy)
 stylesheet=Dokument sa stilovima
+sub-total=Sub Total (Automatic Copy)
 subcategories=Subkategorije
 subcategories[message-board]=Subkategorije
 subcategory[message-board]=Subkategorije
