--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
@@ -14274,6 +14274,7 @@ styles-by-default=Stílusok az alapértelmezés szerint
 styles-from-master=Stílusok a Mesterből
 styles-from-theme=Stílusok a témából
 stylesheet=Stíluslap
+sub-total=Sub Total (Automatic Copy)
 subcategories=Alkategóriák
 subcategories[message-board]=Alkategóriák
 subcategory[message-board]=Alkategória
