--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
@@ -14272,6 +14272,7 @@ styles-by-default=Styles by Default (Automatic Copy)
 styles-from-master=Styles from Master (Automatic Copy)
 styles-from-theme=Styles from Theme (Automatic Copy)
 stylesheet=Foglio di Stile
+sub-total=Sub Total (Automatic Copy)
 subcategories=Sottocategorie
 subcategories[message-board]=Sottocategorie
 subcategory[message-board]=Sottocategoria
