--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
@@ -14271,6 +14271,7 @@ styles-by-default=Styles by Default (Automatic Copy)
 styles-from-master=Styles from Master (Automatic Copy)
 styles-from-theme=Styles from Theme (Automatic Copy)
 stylesheet=스타일시트 (Automatic Translation)
+sub-total=Sub Total (Automatic Copy)
 subcategories=하위 범주
 subcategories[message-board]=하위 범주
 subcategory[message-board]=하위 범주
