--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -14274,6 +14274,7 @@ styles-by-default=Standaardstijlen
 styles-from-master=Stijlen van model
 styles-from-theme=Stijlen van thema
 stylesheet=Opmaakmodel
+sub-total=Sub Total (Automatic Copy)
 subcategories=Subcategorieën
 subcategories[message-board]=Subcategorieën
 subcategory[message-board]=Subcategorie
