--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
@@ -14273,6 +14273,7 @@ styles-by-default=Styles by Default (Automatic Copy)
 styles-from-master=Styles from Master (Automatic Copy)
 styles-from-theme=Styles from Theme (Automatic Copy)
 stylesheet=Folhas de Estilo
+sub-total=Sub Total (Automatic Copy)
 subcategories=Subcategorias
 subcategories[message-board]=Subcategorias
 subcategory[message-board]=Subcategoria
