--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -14271,6 +14271,7 @@ styles-by-default=Stilar efter standard
 styles-from-master=Stilar från huvud
 styles-from-theme=Stilar från tema
 stylesheet=Stilmall
+sub-total=Sub Total (Automatic Copy)
 subcategories=Underkategorier
 subcategories[message-board]=Underkategorier
 subcategory[message-board]=Underkategorier
