--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
@@ -14271,6 +14271,7 @@ styles-by-default=Styles by Default (Automatic Copy)
 styles-from-master=Styles from Master (Automatic Copy)
 styles-from-theme=Styles from Theme (Automatic Copy)
 stylesheet=Kiểu dáng
+sub-total=Sub Total (Automatic Copy)
 subcategories=Chuyên mục con
 subcategories[message-board]=Chuyên mục con
 subcategory[message-board]=Chuyên mục thành phần
