--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
@@ -14273,6 +14273,7 @@ styles-by-default=默认样式
 styles-from-master=母版样式
 styles-from-theme=主题样式
 stylesheet=样式表
+sub-total=Sub Total (Automatic Copy)
 subcategories=子类别
 subcategories[message-board]=子类别
 subcategory[message-board]=子类别
