--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
@@ -14272,6 +14272,7 @@ styles-by-default=預設樣式
 styles-from-master=母版樣式
 styles-from-theme=主題樣式
 stylesheet=報表
+sub-total=Sub Total (Automatic Copy)
 subcategories=子類別
 subcategories[message-board]=子類別
 subcategory[message-board]=子類別
