--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
@@ -14273,6 +14273,7 @@ styles-by-default=Stile nach Standard
 styles-from-master=Stile von Master
 styles-from-theme=Stile von Theme
 stylesheet=Stylesheet
+sub-total=Sub Total (Automatic Copy)
 subcategories=Unterkategorien
 subcategories[message-board]=Unterkategorien
 subcategory[message-board]=Unterkategorie
