--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
@@ -14271,6 +14271,7 @@ styles-by-default=Styles by Default (Automatic Copy)
 styles-from-master=Styles from Master (Automatic Copy)
 styles-from-theme=Styles from Theme (Automatic Copy)
 stylesheet=स्टाइलशीट
+sub-total=Sub Total (Automatic Copy)
 subcategories=उपश्रेणियाँ (Automatic Translation)
 subcategories[message-board]=उपश्रेणियाँ (Automatic Translation)
 subcategory[message-board]=Subcategory (Automatic Copy)
