--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
@@ -14273,6 +14273,7 @@ styles-by-default=デフォルトのスタイル
 styles-from-master=マスターのスタイル
 styles-from-theme=テーマのスタイル
 stylesheet=スタイルシート
+sub-total=Sub Total (Automatic Copy)
 subcategories=サブカテゴリ
 subcategories[message-board]=サブカテゴリ
 subcategory[message-board]=サブカテゴリ
