--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
@@ -14271,6 +14271,7 @@ styles-by-default=Styles by Default (Automatic Copy)
 styles-from-master=Styles from Master (Automatic Copy)
 styles-from-theme=Styles from Theme (Automatic Copy)
 stylesheet=Stylesheet (Automatic Translation)
+sub-total=Sub Total (Automatic Copy)
 subcategories=Subkategories (Automatic Translation)
 subcategories[message-board]=Subkategories (Automatic Translation)
 subcategory[message-board]=Subcategory (Automatic Copy)
