--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
@@ -14271,6 +14271,7 @@ styles-by-default=Styles by Default (Automatic Copy)
 styles-from-master=Styles from Master (Automatic Copy)
 styles-from-theme=Styles from Theme (Automatic Copy)
 stylesheet=Stilsett
+sub-total=Sub Total (Automatic Copy)
 subcategories=Underkategorier
 subcategories[message-board]=Underkategorier
 subcategory[message-board]=Underkategorier
