--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl_BE.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl_BE.properties
@@ -14274,6 +14274,7 @@ styles-by-default=Styles by Default (Automatic Copy)
 styles-from-master=Styles from Master (Automatic Copy)
 styles-from-theme=Styles from Theme (Automatic Copy)
 stylesheet=Opmaakmodel
+sub-total=Sub Total (Automatic Copy)
 subcategories=Subcategorieën
 subcategories[message-board]=Subcategorieën
 subcategory[message-board]=Subcategorieën
